# kubrick

./: .flatpak-manifest.json  .kde-ci.yml  AUTHORS  CMakeLists.txt  README  TODO  kubrick.categories  snapcraft.yaml
data/: CMakeLists.txt  m333CTwirl2.kbk  m333Complete.kbk  m333E2prX.kbk  m333EFlip2.kbk  m333LLCornerPos.kbk  m333LLCornerRot.kbk  m333LLEdgeFlip.kbk  m333LLEdgePos.kbk  m333Layer1.kbk  m333MEdge1.kbk  m333MEdge2.kbk  p333Bar4.kbk  p333DoubleCube.kbk  p333Plus4.kbk  p333Snake.kbk  p333Spot4.kbk  p333Spot6.kbk  p333Tricolor6.kbk  p333U4.kbk  p333U6.kbk  p333Worm.kbk  p333X2.kbk  p333X6.kbk
doc/: CMakeLists.txt  index.docbook
po/ar/: kubrick.po
po/ast/: kubrick.po
po/bg/: kubrick.po
po/bs/: kubrick.po
po/ca/: kubrick.po
po/ca/docs/kubrick/: index.docbook
po/ca@valencia/: kubrick.po
po/cs/: kubrick.po
po/da/: kubrick.po
po/de/: kubrick.po
po/de/docs/kubrick/: index.docbook
po/el/: kubrick.po
po/en_GB/: kubrick.po
po/eo/: kubrick.po
po/es/: kubrick.po
po/es/docs/kubrick/: index.docbook
po/et/: kubrick.po
po/et/docs/kubrick/: index.docbook
po/eu/: kubrick.po
po/fi/: kubrick.po
po/fr/: kubrick.po
po/fr/docs/kubrick/: index.docbook
po/ga/: kubrick.po
po/gl/: kubrick.po
po/he/: kubrick.po
po/hi/: kubrick.po
po/hr/: kubrick.po
po/hu/: kubrick.po
po/ia/: kubrick.po
po/id/: kubrick.po
po/id/docs/kubrick/: index.docbook
po/is/: kubrick.po
po/it/: kubrick.po
po/it/docs/kubrick/: index.docbook
po/ja/: kubrick.po
po/ka/: kubrick.po
po/kk/: kubrick.po
po/km/: kubrick.po
po/ko/: kubrick.po
po/lt/: kubrick.po
po/lv/: kubrick.po
po/mai/: kubrick.po
po/ml/: kubrick.po
po/mr/: kubrick.po
po/nb/: kubrick.po
po/nds/: kubrick.po
po/nl/: kubrick.po
po/nl/docs/kubrick/: index.docbook
po/nn/: kubrick.po
po/pl/: kubrick.po
po/pt/: kubrick.po
po/pt/docs/kubrick/: index.docbook
po/pt_BR/: kubrick.po
po/pt_BR/docs/kubrick/: index.docbook
po/ro/: kubrick.po
po/ru/: kubrick.po
po/sa/: kubrick.po
po/sk/: kubrick.po
po/sl/: kubrick.po
po/sl/docs/kubrick/: index.docbook
po/sr/: kubrick.po
po/sr@ijekavian/: kubrick.po
po/sr@ijekavianlatin/: kubrick.po
po/sr@latin/: kubrick.po
po/sv/: kubrick.po
po/sv/docs/kubrick/: index.docbook
po/tr/: kubrick.po
po/ug/: kubrick.po
po/uk/: kubrick.po
po/uk/docs/kubrick/: index.docbook
po/zh_CN/: kubrick.po
po/zh_TW/: kubrick.po
src/: CMakeLists.txt  Messages.sh  cube.cpp  cube.h  game.cpp  game.h  gamedialog.cpp  gamedialog.h  gameglview.cpp  gameglview.h  kbkglobal.h  kubrick.cpp  kubrick.desktop  kubrick.h  kubrick.lsm  kubrick.qrc  kubrick_debug.cpp  kubrick_debug.h  kubrickui.rc  main.cpp  movetracker.cpp  movetracker.h  org.kde.kubrick.appdata.xml  org.kde.kubrick.desktop  quaternion.cpp  quaternion.h  scenelabel.cpp  scenelabel.h
themes/: CMakeLists.txt  default.svgz
