

########### install files ###############

install( FILES m333Complete.kbk    m333CTwirl2.kbk    m333E2prX.kbk
               m333EFlip2.kbk      m333Layer1.kbk     m333LLCornerPos.kbk
               m333LLCornerRot.kbk m333LLEdgeFlip.kbk m333LLEdgePos.kbk
               m333MEdge1.kbk      m333MEdge2.kbk
               p333Bar4.kbk        p333DoubleCube.kbk p333Plus4.kbk
               p333Snake.kbk       p333Spot4.kbk      p333Spot6.kbk
               p333Tricolor6.kbk   p333U4.kbk         p333U6.kbk
               p333Worm.kbk        p333X2.kbk         p333X6.kbk
               DESTINATION ${DATA_INSTALL_DIR}/kubrick )

